Allow biblio-files and bibliography in latex
see: https://github.com/jgm/pandoc-templates/issues/42

--- a/default.latex
+++ b/default.latex
@@ -44,9 +44,8 @@ $if(natbib)$
 $endif$
 $if(biblatex)$
 \usepackage{biblatex}
-$if(biblio-files)$
-\bibliography{$biblio-files$}
-$endif$
+$if(biblio-files)$ \bibliography{$biblio-files$} $endif$
+$if(bibliography)$ \bibliography{$bibliography$} $endif$
 $endif$
 $if(listings)$
 \usepackage{listings}
@@ -161,15 +160,15 @@ $endif$
 $body$
 
 $if(natbib)$
-$if(biblio-files)$
 $if(biblio-title)$
 $if(book-class)$
 \renewcommand\bibname{$biblio-title$}
 $else$
 \renewcommand\refname{$biblio-title$}
 $endif$
-$endif$
-\bibliography{$biblio-files$}
+
+$if(biblio-files)$ \bibliography{$biblio-files$} $endif$
+$if(bibliography)$ \bibliography{$bibliography$} $endif$
 
 $endif$
 $endif$
